--- a/app-kotlin/src/main/res/layout/bottom_sheet_detail_view.xml
+++ b/app-kotlin/src/main/res/layout/bottom_sheet_detail_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?><!-- Bottom sheet -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/sheet_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#DD222222"
@@ -17,9 +18,9 @@
         android:gravity="center_vertical"
         android:lines="3"
         android:minHeight="85dp"
-        android:paddingBottom="5dp"
         android:paddingLeft="10dp"
         android:paddingRight="80dp"
+        android:paddingBottom="5dp"
         android:text=""
         android:textColor="@android:color/white"
         android:textSize="18sp" />
@@ -30,8 +31,8 @@
         android:layout_below="@id/tv_title"
         android:background="#CC222222"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="15dp">
+        android:paddingTop="15dp"
+        android:paddingRight="10dp">
 
         <RelativeLayout
             android:id="@+id/rl_etc_view"
@@ -72,8 +73,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp">
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp">
 
                 <ImageView
                     android:id="@+id/img_comment"
