no48 - 코드 최신화

--- a/bottomsheetsample/src/main/res/layout/activity_main.xml
+++ b/bottomsheetsample/src/main/res/layout/activity_main.xml
@@ -21,7 +21,9 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include
+        android:id="@+id/container"
+        layout="@layout/content_main" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/rl_bottom_sheet"
